[package]
name = "scheduler-bindings"
version = "0.1.0"
edition = "2024"


[dependencies]
solana-runtime = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "solana-runtime", features = [
  "dev-context-only-utils",
] }
agave-scheduler-bindings = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "agave-scheduler-bindings" }
solana-poh = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "solana-poh", features = [
  "dev-context-only-utils",
] }
solana-cost-model = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "solana-cost-model" }
solana-core = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "solana-core" }
solana-perf = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "solana-perf"}
agave-scheduling-utils = { git = "https://github.com/anza-xyz/agave.git",  rev = "60ba168", package = "agave-scheduling-utils" }
agave-transaction-view = { git = "https://github.com/anza-xyz/agave.git", rev = "60ba168", package = "agave-transaction-view"}
solana-sdk = "3.0.0"
solana-genesis-config = "3.0.0"
solana-packet = "3.0.0"
solana-system-transaction = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-fee-calculator = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-transaction = "3.0.1"
agave-banking-stage-ingress-types = "3.0.7"
solana-system-interface = "2.0"
crossbeam-channel = "0.5.15"
rts-alloc = "0.2.0"
shaq = "0.2.0"
log = "0.4.28"
core_affinity = "0.8.3"
ctrlc = "3.4.6"
clap = { version = "4.5.49", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
rand = "0.9.2"
bincode = { version = "2.0.1", features = ["serde"] }

